// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextStatic component renders correctly if text and styleText is set 1`] = `
<Text
  style={
    Object {
      "color": "#ffffff",
    }
  }
>
  Hello world
</Text>
`;

exports[`TextStatic component renders correctly if text prop is number 1`] = `
<Text>
  100
</Text>
`;

exports[`TextStatic component renders correctly if text prop is string 1`] = `
<Text>
  Hello world
</Text>
`;

exports[`TextStatic component renders correctly if text prop no set 1`] = `<Text />`;
